--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 /*---break---*/
 @plugin "tailwindcss-animate";
+@plugin "@tailwindcss/typography";
 /*---break---*/
 @custom-variant dark (&:is(.dark *));
 
